--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a id="link-movie" href="https://www.netflix.com/browse" oncontextmenu="editLink(event, 'link-movie')"><img src="映画.png" alt="映画"></a>
             <a id="link-school" href="https://portal.iwasaki.ac.jp/lms/" oncontextmenu="editLink(event, 'link-school')"><img src="学校.png" alt="学校"></a>
             <a id="link-memo" href="http://www.drpartners.jp/tools/browser-memocho.htm" oncontextmenu="editLink(event, 'link-memo')"><img src="メモ.png" alt="メモ"></a>
-            <a id="link-calendar" href="カレンダー.html" oncontextmenu="editLink(event, 'link-calendar')"><img src="カレンダー.png" alt="カレンダー"></a>
+            <a id="link-calendar" href="https://freecalend.com/close/mem252961/index" oncontextmenu="editLink(event, 'link-calendar')"><img src="カレンダー.png" alt="カレンダー"></a>
         </div>
         <div>
             <a id="link-profile" href="プロフィール編集.html" oncontextmenu="editLink(event, 'link-profile')"><img src="プロフィ.png" alt="プロフィール編集"></a>
